# PCMOBO

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: core.py  paths.py
src/acq/: __init__.py  portfolio.py
src/benchmarks/: __init__.py  adapters.py
src/cli/: __init__.py  run_synthetic_campaign.py
src/engine/: __init__.py  modeling.py  run_seed.py
src/llm_runtime/: __init__.py  langgraph_json_client.py
src/policy/: __init__.py  bandit_ucb.py  llm_switch.py
src/studies/: __init__.py
src/studies/estm_thermoelectric/: __init__.py  constants.py
src/studies/estm_thermoelectric/data/: estm_mid_constrained_mobo_v1.csv  estm_mid_constrained_mobo_v1_manifest.json
src/studies/estm_thermoelectric/policy/: __init__.py  llm_switch.py
src/studies/estm_thermoelectric/runner/: __init__.py  run_estm_campaign.py
src/studies/estm_thermoelectric/wrappers/: __init__.py  estm_bo.py  estm_problem.py
src/studies/hea_design/: __init__.py  constants.py
src/studies/hea_design/policy/: __init__.py  llm_switch.py
src/studies/hea_design/runner/: __init__.py  run_hea_campaign.py
src/studies/hea_design/wrappers/: __init__.py  hea_bo.py  hea_problem.py
