[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcmbo"
version = "0.1.0"
description = "PCMOBO: constrained multi-objective Bayesian optimization with portfolio switching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "gpytorch>=1.11",
  "botorch>=0.11",
  "langchain>=0.3",
  "langchain-openai>=0.3",
  "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8",
]

[project.scripts]
pcmbo-synthetic = "cli.run_synthetic_campaign:main"
pcmbo-hea = "studies.hea_design.runner.run_hea_campaign:main"
pcmbo-estm = "studies.estm_thermoelectric.runner.run_estm_campaign:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["core", "paths"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"studies.hea_design" = ["data/design_space.csv"]
"studies.estm_thermoelectric" = [
  "data/estm_mid_constrained_mobo_v1.csv",
  "data/estm_mid_constrained_mobo_v1_manifest.json",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM"]
ignore = ["B023", "E402", "UP006", "UP035"]

